fix(ui): add scrollbar to detail selector

--- a/src/content/styles/modules/_details.scss
+++ b/src/content/styles/modules/_details.scss
@@ -66,7 +66,7 @@
             overflow: hidden;
 
             &-item {
-                width: $slide-out-width;
+                width: 100%;
                 display: flex;
                 position: relative;
                 height: rem(4.8);
